test/fail/basic_syntax/docstring_inconsistent_indent.lily
#[
SyntaxError: Docstring has inconsistent indentation.
    from docstring_inconsistent_indent.lily:7:
]#

### asdf
    ### 1234
define f {}
